Eevee - Environment texture partially visible on transparent render #60902

Closed
opened 2019-01-26 23:59:04 +01:00 by Sven Stein · 5 comments

System Information
Operating system: Windows 10 Pro 64-Bit
Graphics card: AMD Ryzen 5 2400G with Vega 11 Graphics

Blender Version
Broken: Blender 2.80 (1b6da95ccb)

Short description of error
When setting the render mode to transparent, the environment texture partially visible inside the alpha gradient of the image.

The first image is the original render. On the second image I put a black background using Photoshop to make the fences of the environment texture more visible.

result.png
result.png

Exact steps for others to reproduce the error
transparent.blend

Download the .blend file and render the image. Everything is preset so you don't have to change anything.

**System Information** Operating system: Windows 10 Pro 64-Bit Graphics card: AMD Ryzen 5 2400G with Vega 11 Graphics **Blender Version** Broken: Blender 2.80 (1b6da95ccb11) **Short description of error** When setting the render mode to transparent, the environment texture partially visible inside the alpha gradient of the image. The first image is the original render. On the second image I put a black background using Photoshop to make the fences of the environment texture more visible. ![result.png](https://archive.blender.org/developer/F6415069/result.png) ![result.png](https://archive.blender.org/developer/F6415060/result.png) **Exact steps for others to reproduce the error** [transparent.blend](https://archive.blender.org/developer/F6415024/transparent.blend) Download the .blend file and render the image. Everything is preset so you don't have to change anything.
Author

Added subscriber: @HADESBLACK

Added subscriber: @HADESBLACK

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-01-29 14:06:42 +01:00

@fclem, I'm guessing this might be a render limitation rather than a bug?

@fclem, I'm guessing this might be a render limitation rather than a bug?

This issue was referenced by 41cb565880

This issue was referenced by 41cb5658803bf3b96f18e93c74c6af66ecdb1e83

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60902
No description provided.